# Civil_ROS

./: README.md
ads_b_read/: CMakeLists.txt  README.md  package.xml
ads_b_read/launch/: adsb.launch
ads_b_read/src/: ads_b_read_node.cpp  header.h  log_node.cpp  mavros_log_node.cpp  parse_node.cpp
fcc_serial/: CMakeLists.txt  package.xml
fcc_serial/launch/: gps_logger.launch  server_udp.launch  server_udp_backup.launch  server_udp_final.launch
fcc_serial/msg/: MsgStrRXttyO.msg
fcc_serial/src/: CommModule.h  DefineList.h  client_udp_node.cpp  client_udp_node_original.cpp  client_udp_node_uav1.cpp  client_udp_node_uav2.cpp  client_udp_node_usv1.cpp  fcc_serial_node.cpp  server_udp_node_opv.cpp  server_udp_node_uav1.cpp  server_udp_node_uav2.cpp  server_udp_node_usv1.cpp  server_udp_node_usv2.cpp
udp_client/: CMakeLists.txt  package.xml
udp_client/src/: Struct_comm.h  Struct_data.txt  TX_data_ver2.txt  definition.h  header.h  struct_msg.h  udp_client.cpp  udp_comm_node.cpp~
udp_client/src/temp/: udp_client.cpp
udp_client/src/temp/ADSB_orig/: udp_client.cpp
udp_client/src/temp/IMG_orig/: Struct_comm.h
udp_python/: udp_server.py
udp_server/: CMakeLists.txt  package.xml
udp_server/src/: udp_clientcpp~  udp_comm_node.cpp~  udp_server.cpp
