<?xml version="1.0"?>
<package>
  <name>ads_b_read</name>
  <version>0.0.0</version>
  <description>ads_b_read</description>

  <author email="usrg@gmail.com">usrg</author>

  <maintainer email="usrg@gmail.com">usrg</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
